[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"


[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311"]
extend-exclude = "docs"

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 120

[tool.flake8]
ignore = ['D101', 'D102', 'D105', 'D107', 'D401', 'D400']
max-line-length = 120
count = true
show-source = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
