[metadata]
name = asyncpg-lostream
version = 0.1.0
author = Red Hat, Inc.
author_email = info@ansible.com
maintainer = HAP
maintainer_email = hproctor@redhat.com
url = https://github.com/Red-HAP/asyncpg-lostream
project_urls =
    issues=https://github.com/Red-HAP/asyncpg-lostream/issues
    wiki=https://github.com/Red-HAP/asyncpg-lostream/wiki
license = Apache-2.0
license_files =
    LICENSE
description = CRUD on PostgreSQL large objects using async drivers and asyncio. Data are read and written in chunks.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    asyncio
    asyncpg
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src

python_requires = >=3.9
install_requires =
    sqlalchemy[asyncio] >= 1.4

[options.packages.find]
where = src
